--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
                 
             </div>
-            <div class="project" data-aos="zoom-in" data-aos-delay="500">Explore Projects</div>
+            <a href = "https://github.com/pavansaikuppannagari/" class = "project" data-aos="zoom-in" data-aos-delay="500">Explore Projects</a>
             <div class="close">
               <i class="fa-solid fa-list fa-lg navbar-toggler" aria-label="Toggle navigation" style="margin-right: 1.5em;"></i>
             </div>
@@ -41,7 +41,9 @@
           <div class="about-left">
               <div data-aos="fade-right" data-aos-delay="300">
                   <h2>Crafting Innovative solutions with <i>Code</i>.</h2>
-                  <p>As a recent graduate with a passion for Python and Web Development, I'm dedicated to building efficient and user-friendly applications. Explore my portfolio to see how I can bring your ideas to life. Let's connect and create something amazing together!</p>
+                  <p>As a recent graduate with a passion for Data Science and Web Development, I built a strong foundation in extracting and adept at transforming raw data into insights, preparing reports, and 
+                    supporting data-driven decision-making. Experienced in data cleaning, data processing, automation scripts, and developing interactive 
+dashboards using Power BI, DAX, and Power Query. Let's connect and create something amazing together!</p>
               </div>
               <div class="sign-up" data-aos="fade-up" data-aos-delay="300">
                 <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your Email.." required="">
@@ -56,30 +58,30 @@
         <section class="meet" id="meet">
           <div class="meet-left">
             <h2 data-aos="fade-right" data-aos-delay="300">Meet Pavan Sai</h2>
-            <p data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="400">Pavan Sai is dedicated Python and Web Developer with recent graduate in Computer Science and Engieering. He is passionate about building innovative applications andcontinously imporving his skills in tech career.</p>
+            <p data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="400">Pavan Sai is dedicated Data Analyst with recent graduate in Computer Science and Engieering. He is passionate in transforming raw data into actionable insights and continously improving his skills in tech career.</p>
             <div class="meet-grid">
               <div class="item" id="countingSection">
                 <div class="item-info" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="500">
-                  <h2><span data-target="3" class="counter">0</span> Projects</h2>
-                  <p>I has successfully completed several projects, showcasing the ability to develop functional and user-friendly applications.</p>
+                  <h2><span data-target="5" class="counter">0</span> Projects</h2>
+                  <p>I have successfully completed several projects, showcasing the ability to build reports, develop functional and user-friendly applications.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item-info" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="600">
                   <h2><span data-target="4" class="counter">0</span> Languages</h2>
-                  <p>I am profiecient in HTML/CSS, JavaScript, Python, SQL enables me to create dynamic and responsive web applications and problem-solving.</p>
+                  <p>I am proficient in Python, EDA, SQL and Web Development that enables me to create dynamic reports, dashboards and responsive web applications with problem-solving.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item-info" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="700">
-                  <h2><span data-target="3" class="counter">0</span> Frameworks</h2>
-                  <p>I has experience with frameworks like Bootstrap, Node JS, which enhance my web development capabilities.</p>
+                  <h2><span data-target="7" class="counter">0</span> Libraries</h2>
+                  <p>Experienced in leveraging NumPy, Pandas, and Scikit-Learn for statistical modeling and analysis. Skilled in data visualization via Matplotlib/Seaborn and automated data extraction using BeautifulSoup and Requests.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item-info" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="800">
-                  <h2><span data-target="3" class="counter">0</span> Tools</h2>
-                  <p>I am familiar with tools like VSCode, Jupyter Notebook, MySQL WorkBench and Xampp Server, ensuring my robust application perfomance.</p>
+                  <h2><span data-target="5" class="counter">0</span> Tools</h2>
+                  <p>I am familiar with tools like Jupyter Notebook, Power BI, MySQL WorkBench, MS Excel and VS Code, ensuring my robust application perfomance.</p>
                 </div>
               </div>
             </div>
@@ -97,13 +99,12 @@
             <div class="project-id" data-aos="fade-up" data-aos-delay="300" >
               <img src="web-1.png">
               <div class="project-info">
-                <h3>My Portfolio</h3>
-                <p>Craft a compelling portfolio showcasing my skills and unique story. Select impactful projects 🚀, writing "About Me"  highlighting expertise, and design a professional, easy-to-navigate presentation. Make a lasting impression!</p>
+                <h3>Job Market Analysis</h3>
+                <p>An end-to-end Python project that scrapes LinkedIn data and uses EDA to reveal hidden salary trends, high-paying industries, and geographic hiring hotspots.</p>
                 <div class="project-softwares">
-                  <div class="soft-item">HTML/CSS</div>
-                  <div class="soft-item">JS</div>
-                  <div class="soft-item">Bootstrap</div>
-                  <div class="soft-item">AOS</div>
+                  <div class="soft-item">Python</div>
+                  <div class="soft-item">Web Scraping</div>
+                  <div class="soft-item">Data Visualization</div>
                 </div>
               </div>
             </div>
@@ -111,16 +112,29 @@
             <div class="project-id" data-aos="fade-up" data-aos-delay="500">
               <img src="web-2.png">
               <div class="project-info">
-                <h3>Digital LMS</h3>
-                <p>Developed a full-stack Digital Library Management System (LMS) with separate admin and student interfaces with security authentication and validation. Built an interactive user-friendly between admin and student with specific operations.</p>
+                <h3>Network Anomaly Detection</h3>
+                <p>Built an ML pipeline to detect anomalous network load (by network behaviour e.g., overload, attacks, misuse) based on traffic, resource, and security event features.</p>
                 <div class="project-softwares">
-                  <div class="soft-item">HTML/CSS</div>
-                  <div class="soft-item">JS</div>
-                  <div class="soft-item">Node JS</div>
-                  <div class="soft-item">SQL</div>
+                  <div class="soft-item">ML Algorithms</div>
+                  <div class="soft-item">Scikit-learn</div>
+                  <div class="soft-item">Streamlit</div>
                 </div>
               </div>
             </div>
+
+            <div class="project-id" data-aos="fade-up" data-aos-delay="500">
+              <img src="web-3.png">
+              <div class="project-info">
+                <h3>Cyber bully Detection</h3>
+                <p>Built an ML model to detect Cyberbully and harassment in social media posts. The model classifies each text into multiple types of bullying such as race-related, gender/sexual-related, religion-related, or non-bullying.</p>
+                <div class="project-softwares">
+                  <div class="soft-item">ML Algorithms</div>
+                  <div class="soft-item">Scikit-learn</div>
+                  <div class="soft-item">Streamlit</div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
@@ -136,11 +150,18 @@
                 <p>Profiecient in Python programming language, with experience in developing various applications.</p>
               </div>
             </div>
+            <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="450">
+              <div class="skill-info">
+                <i class="fa-solid fa-file-export fa-beat fa-3x icon" style="color: #86c176;"></i>
+                <h2>Web Scraping</h2>
+                <p>Proficient in developing automated data pipelines using BeautifulSoup and Requests to solve data-scarcity challenges.</p>
+              </div>
+            </div>
             <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="250">
               <div class="skill-info">
-                <i class="fa-solid fa-code fa-beat fa-3x icon" style="color: #86c176;"></i>
-                <h2>Web Development</h2>
-                <p>Experienced in front-end and back-end web development, creating responsive and user-frienldy websites.</p>
+                <i class="fa-solid fa-magnifying-glass-chart fa-beat fa-3x icon" style="color: #86c176;"></i>
+                <h2>Data Analysis</h2>
+                <p>Specializing in data extraction, statistical analysis, and visual storytelling to drive data-informed decision-making.</p>
               </div>
             </div>
             <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="300">
@@ -152,23 +173,16 @@
             </div>
             <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="350">
               <div class="skill-info">
-                <i class="fa-brands fa-html5 fa-beat fa-3x icon" style="color: #86c176;"></i>
-                <h2>HTML</h2>
-                <p>Solid understanding of HTML for structuring web pages.</p>
+                <i class="fa-solid fa-code fa-beat fa-3x icon" style="color: #86c176;"></i>
+                <h2>Web Development</h2>
+                <p>Experienced in front-end and back-end web development, creating responsive and user-frienldy websites.</p>
               </div>
             </div>
             <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="400">
               <div class="skill-info">
-                <i class="fa-brands fa-css3-alt fa-beat fa-3x icon" style="color: #86c176;"></i>
-                <h2>CSS</h2>
-                <p>Proficient in CSS for styling web pages and creating visual appealing designs.</p>
-              </div>
-            </div>
-            <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="450">
-              <div class="skill-info">
-                <i class="fa-brands fa-js fa-beat fa-3x icon" style="color: #86c176;"></i>
-                <h2>JavaScript</h2>
-                <p>Experience in JavaScript for adding interactivity and dynamic behaviour to websites.</p>
+                <i class="fa-brands fa-aws fa-beat fa-3x icon" style="color: #86c176;"></i>
+                <h2>AWS</h2>
+                <p>Skilled in leveraging AWS cloud fundamentals alongside Python to build scalable data pipelines and perform cost-effective cloud-based analysis.</p>
               </div>
             </div>
             <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="500">
@@ -189,7 +203,7 @@
               <div class="skill-info">
                 <i class="fa-brands fa-git-alt fa-beat fa-3x icon" style="color: #86c176;"></i>
                 <h2>Git & Github</h2>
-                <p>Profiecient in using Git for version control and collaboration.</p>
+                <p>Proficient in using Git for version control and collaboration.</p>
               </div>
             </div>
           </div>
@@ -210,7 +224,7 @@
                             </div>
                             <div class="contact-info-text">
                                 <h4>Location</h4>
-                                <p>PPM Manyam, AP, India</p>
+                                <p>Hyderabd, Telangana, India</p>
                             </div>
                         </div>
                         <div class="contact-info-item">
