--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ dashboards using Power BI, DAX, and Power Query. Let's connect and create someth
               <div class="item">
                 <div class="item-info" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="600">
                   <h2><span data-target="4" class="counter">0</span> Languages</h2>
-                  <p>I am proficient in Python, EDA, SQL and Web Development that enables me to create dynamic reports, dashboards and responsive web applications with problem-solving.</p>
+                  <p>I am proficient in <b>Python</b>, <b>EDA</b>, <b>SQL</b> and <b>Web Development</b> that enables me to create dynamic reports, dashboards and responsive web applications with problem-solving.</p>
                 </div>
               </div>
               <div class="item">
@@ -175,7 +175,7 @@ dashboards using Power BI, DAX, and Power Query. Let's connect and create someth
               <div class="skill-info">
                 <i class="fa-solid fa-code fa-beat fa-3x icon" style="color: #86c176;"></i>
                 <h2>Web Development</h2>
-                <p>Experienced in front-end and back-end web development, creating responsive and user-frienldy websites.</p>
+                <p>Experienced in front-end with HTML, CSS, Bootstrap & JS, creating responsive and user-frienldy websites.</p>
               </div>
             </div>
             <div class="skill-item" data-aos="zoom-in-up" data-aos-delay="400">
@@ -308,3 +308,4 @@ dashboards using Power BI, DAX, and Power Query. Let's connect and create someth
   <script src="index.js"></script>
 </body>
 </html>
+
